# quickstart-pytest-automatization

./: .coverage  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: github-actions-pytest-docker  github-actions-pytest-docker.yml  github-actions-pytest.yml
reports/coverage/: coverage.json  coverage.xml
src/: operaciones.py
src/pytest_quickstart.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/integration/: test_operaciones.py
