[project]
name = "pytest_quickstart"
version = "0.1.0"
description = "Proyecto de ejemplo con Pytest orientado a revisión de outputs"
authors = [
    { name="Benjamin.P" }
]
requires-python = ">=3.10" 

dependencies = [
    "pytest",
    "pytest-cov"
]

[tool.pytest.ini_options]
# Carpeta donde buscar tests
testpaths = ["tests"]
#pythonpath = ["src"]

#Configuramos coverage(-cov) para almacenar en carpetas definidas.
[tool.coverage.run]
branch = false
source = ["src"]

[tool.coverage.report]
show_missing = true
skip_covered = false

#carpetas segun tipo de reporte:

[tool.coverage.html]
directory = "reports/coverage/html"

[tool.coverage.xml]
output = "reports/coverage/coverage.xml"

[tool.coverage.json]
output = "reports/coverage/coverage.json"


# Opciones por defecto al correr pytest
# -v                    ->aumenta el nivel de detales en el output
# --maxfail=3           -> maximo 3 fallos
# --disable-warnings    -> deshabilita advertencias

addopts = "-v --maxfail=100 --disable-warnings"

# Marcadores personalizados (ejemplo)
markers = [
    "slow: tests que toman más tiempo",
    "error: tests que validan errores esperados",
    "integration: marcar tests como test de integracion",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"


